tests/integration/security/test_artifacts/security-a995fce91cf649b097c94d/TestMutualTlsOrigination/credential_with_CRL_having_unused_revoked_server_certificate/_test_context/DestinationRule.3061164332.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-mtls-credential-dummy-crl
spec:
  host: "external.external-4-16320.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: mtls-credential-dummy-crl
          sni: external.external-4-16320.svc.cluster.local
